Create CommandIndex and ContextIndex (#263)
* Basic structure of CommandIndex and ContextIndex

* Fix name of index in ContextIndex. Add general concepts of all methods

* Add the rest of the methods and RestPostContentAction to testing

* Fix RestPostContentAction to work with threads, add logs, and test. POST and GET working

* Spotless apply

* Get all working. Generic Document to test

* Add RestPostContentManager

* Add logs to test

* Add javadoc to all relevant methods

* Improve some details and add logs.

* Spotless apply

* Fix the names of indexs. Index a document in wazuh-content on the initialization

* Fix ContextIndex parse. Add put method to wazuh-content

* Add id in the post request

* Make context and consumer names plugin constants

* Use correct PluginSettings getInstance() method

* Use correct format for constants

* Remove unused code

---------

Signed-off-by: Álex Ruiz <alejandro.ruiz.becerra@wazuh.com>
Co-authored-by: Álex Ruiz <alejandro.ruiz.becerra@wazuh.com>
Co-authored-by: f-galland <federico.galland@wazuh.com>