@@ -18,6 +18,7 @@ package com.wazuh.contentmanager;
 
 import org.opensearch.client.Client;
 import org.opensearch.cluster.metadata.IndexNameExpressionResolver;
+import org.opensearch.cluster.node.DiscoveryNode;
 import org.opensearch.cluster.node.DiscoveryNodes;
 import org.opensearch.cluster.service.ClusterService;
 import org.opensearch.common.settings.*;
@@ -26,6 +27,7 @@ import org.opensearch.core.xcontent.NamedXContentRegistry;
 import org.opensearch.env.Environment;
 import org.opensearch.env.NodeEnvironment;
 import org.opensearch.plugins.ActionPlugin;
+import org.opensearch.plugins.ClusterPlugin;
 import org.opensearch.plugins.Plugin;
 import org.opensearch.repositories.RepositoriesService;
 import org.opensearch.rest.RestController;
@@ -34,16 +36,27 @@ import org.opensearch.script.ScriptService;
 import org.opensearch.threadpool.ThreadPool;
 import org.opensearch.watcher.ResourceWatcherService;
 
+import java.io.IOException;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 
-import com.wazuh.contentmanager.resthandler.CatalogHandler;
-import com.wazuh.contentmanager.resthandler.ChangesHandler;
+import com.wazuh.contentmanager.index.ContentIndex;
+import com.wazuh.contentmanager.index.ContextIndex;
+import com.wazuh.contentmanager.rest.CatalogHandler;
+import com.wazuh.contentmanager.rest.ChangesHandler;
+import com.wazuh.contentmanager.rest.RestPostContentManager;
+import com.wazuh.contentmanager.rest.RestPostContextAction;
 import com.wazuh.contentmanager.settings.PluginSettings;
 
-public class ContentManagerPlugin extends Plugin implements ActionPlugin {
+public class ContentManagerPlugin extends Plugin implements ClusterPlugin, ActionPlugin {
+
+    public static final String CONTEXT_NAME = "vd_1.0.0";
+    public static final String CONSUMER_NAME = "vd_4.8.0";
+
+    private ContextIndex contextIndex;
+    private ContentIndex contentIndex;
 
     /** ClassConstructor * */
     public ContentManagerPlugin() {}
@@ -61,8 +74,11 @@ public class ContentManagerPlugin extends Plugin implements ActionPlugin {
             NamedWriteableRegistry namedWriteableRegistry,
             IndexNameExpressionResolver indexNameExpressionResolver,
             Supplier<RepositoriesService> repositoriesServiceSupplier) {
+        this.contentIndex = new ContentIndex(client, clusterService, threadPool);
+        this.contextIndex = new ContextIndex(client, clusterService, threadPool);
+
         PluginSettings.getInstance(environment.settings(), clusterService);
-        return Collections.emptyList();
+        return List.of(this.contentIndex, this.contextIndex);
     }
 
     @Override
@@ -74,7 +90,28 @@ public class ContentManagerPlugin extends Plugin implements ActionPlugin {
             SettingsFilter settingsFilter,
             IndexNameExpressionResolver indexNameExpressionResolver,
             Supplier<DiscoveryNodes> nodesInCluster) {
-        return List.of(new CatalogHandler(), new ChangesHandler());
+        // Just for testing purposes
+        return List.of(
+                new RestPostContextAction(this.contextIndex),
+                new RestPostContentManager(this.contentIndex),
+                new CatalogHandler(),
+                new ChangesHandler());
+    }
+
+    @Override
+    public void onNodeStarted(DiscoveryNode localNode) {
+        this.contextIndex.createIndex();
+        this.contentIndex.createIndex();
+    }
+
+    /**
+     * Close the resources opened by this plugin.
+     *
+     * @throws IOException if the plugin failed to close its resources
+     */
+    @Override
+    public void close() throws IOException {
+        super.close();
     }
 
     @Override
